<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:useDefaultMargins="true"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/brute_salary"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bruteSalaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="Hello Word"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/inss"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/inssTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="Hello Word"
            android:textColor="@color/design_default_color_error"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/irrf"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/irrfTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="Hello Word"
            android:textColor="@color/design_default_color_error"
            android:textSize="25sp" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/another_discounts"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/anotherDiscountsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="3"
            android:layout_column="1"
            android:text="Hello Word"
            android:textColor="@color/design_default_color_error"
            android:textSize="25sp" />

    </GridLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/liquid_salary"
            android:textColor="@color/colorWhite"
            android:textSize="31sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/discounts"
            android:textColor="@color/colorWhite"
            android:textSize="31sp" />

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/liquidSalaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="999999"
            android:textColor="@color/colorWhite"
            android:textSize="31sp"
           />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/discountsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:text="99.99"
            android:textColor="@color/colorWhite"
            android:textSize="31sp" />

    </GridLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/back"

        />



</LinearLayout>
